# Eeman

./: .gitignore  README.md  config.ini  main.py  meson.build  org.codeberg.SHuRiKeN.Eeman.json  pro.saladin.Eeman.json  setup.py  sh.shuriken.Eeman.json
cli/: start.py
data/: meson.build  org.codeberg.SHuRiKeN.Eeman.desktop.in  org.codeberg.SHuRiKeN.Eeman.gschema.xml  org.codeberg.SHuRiKeN.Eeman.metainfo.xml.in  pro.saladin.Eeman.metainfo.xml.in  sh.shuriken.Eeman.desktop.in  sh.shuriken.Eeman.gschema.xml  sh.shuriken.Eeman.metainfo.xml.in
data/icons/: meson.build
data/icons/hicolor/scalable/actions/: meson.build
gui/: display.py  preferences.py  start.py  welcome.py
libs/: setup.py
po/: POTFILES  meson.build
setup/: location.py  method.py
setup_cli/: location.py  method.py
src/: config.ini  configuration.py  eeman.gresource.xml  eeman.in  main.py  meson.build
src/gui/: display.py  preferences.py  welcome.py
src/libs/: setup.py
